--- a/style.css
+++ b/style.css
@@ -2,19 +2,19 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     flex-direction: column;
-}
+    }
 
 .section-one {
     display: flex;
     flex-direction: column;
     background: #1F2937;
     color: white;
-    margin: -10px;
+    margin: -10px -10px 0 -10px;
     padding: 0 120px;
     min-width: 450px;
 }
 
-.top {
+.section-one .top {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -57,6 +57,8 @@ body {
     border: none;
     width: 100px;
     height: 30px;
+    margin: 0;
+    padding: 0;
 }
 
 .bot-left h1 {
@@ -64,16 +66,42 @@ body {
     font-weight: 900;
     color: #F9FAF8;
     margin-bottom: -25px;
-}
-
-h1, p, button {
     margin: 0;
     padding: 0;
 }
 
-img {
+.bot-right img {
     max-width: 100%;
     height: auto;
     max-height: 250px;
     min-width: 200px;
+}
+
+.section-two img{
+    width: 150;
+    height: 150px;
+}
+
+.section-two .top {
+    display: flex;
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+    align-items: center;
+    justify-content: center;
+    margin: 50px auto;
+}
+
+.section-two .bot {
+    display: flex;
+    padding: 0 200px;
+    justify-content: center;
+    gap: 60px;
+}
+
+.card p {
+    text-align: center;
+    margin-top: 8px;
+    font-size: 16px;
+    color: #474849;
 }
