--- a/style.css
+++ b/style.css
@@ -96,7 +96,15 @@ body {
     display: flex;
     padding: 0 200px;
     justify-content: center;
+    align-items: center;
     gap: 60px;
+}
+
+.section-two .card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .card p {
@@ -115,7 +123,7 @@ body {
 }
 
 .section-three .quote {
-    font-size: 36px;
+    font-size: 30px;
     font-weight: lighter;
     font-style: italic;
     color: #1F2937;
@@ -124,4 +132,29 @@ body {
 .section-three .name{
     align-self: flex-end;
     font-weight: bolder;
+}
+
+.section-four {
+    background-color: #3882F6;
+    display: flex;
+    padding: 60px 80px;
+    margin: 100px 80px;
+    color: #F9FAF8;
+    border-radius: 10px;
+    justify-content: space-between;
+}
+
+.section-four button {
+    background-color: #3882F6;
+    border: solid;
+    border-color: white;
+    border-radius: 10px;
+    padding: 0 35px;
+    color: #F9FAF8;
+    font-weight: 700;
+}
+
+.section-four .header {
+    font-size: 20px;
+    font-weight: 700;
 }
