--- a/style.css
+++ b/style.css
@@ -8,10 +8,11 @@ body {
 .section-one {
     display: flex;
     flex-direction: column;
+    align-self: center;
     background: #1F2937;
     color: white;
-    padding: 0 350px;
-    min-width: 800px;
+    padding: 0 600px;
+    min-width: 900px;
 }
 
 .section-one .top {
@@ -38,7 +39,7 @@ body {
     display: flex;
     margin-bottom: 100px;
     justify-content: space-between;
-    gap: 80px;
+
 }
 
 .section-one .bot-left {
@@ -75,6 +76,10 @@ body {
     height: auto;
     max-height: 250px;
     min-width: 250px;
+}
+
+.section-two {
+    min-width: 1000px;
 }
 
 .section-two img{
@@ -118,12 +123,13 @@ body {
     background: #E5E7EB;
     display: flex;
     flex-direction: column;
-    padding: 75px 150px;
+    padding: 75px 500px;
     gap: 10px;
     margin-top: 50px;
     height: 300px;
-    align-items: center;
+    align-self: center;
     justify-content: center;
+    min-width: 600px;
 }
 
 .section-three .quote {
